--- a/config/template/datasources.cfg
+++ b/config/template/datasources.cfg
@@ -34,6 +34,9 @@ bbox_ur_lat=69.005
 # accumulated radar rainfall
 accum_period=5
 
+# additional keyword arguments for reading radar data
+[radar_importer_kwargs]
+
 [gauge]
 # the rain gauge data to read from SmartMet
 # PRA_PT1H_ACC = 1 h accumulation
