--- a/config/template/compute_kriged_correction_factors.cfg
+++ b/config/template/compute_kriged_correction_factors.cfg
@@ -9,3 +9,9 @@ ur_lat: 69.005
 # number of pixels in x- and y-direction
 n_pixels_x: 760
 n_pixels_y: 1226
+
+[output]
+# output type
+#   geotiff = GeoTIFF file
+#   numpy = compressed numpy array
+type: geotiff
