--- a/config/template/fit_kriging_model.cfg
+++ b/config/template/fit_kriging_model.cfg
@@ -1,4 +1,6 @@
 [kriging]
+# the Kriging method to use: 'ordinary' or 'regression'
+method:
 # scaling factor for the temporal dimension: 'auto' or a scalar
 # auto: heuristic value based on the standard deviations of spatial and temporal
 #       coordinates
