Convert distances to kilometers

--- a/config/template/compute_kriged_correction_factors.cfg
+++ b/config/template/compute_kriged_correction_factors.cfg
@@ -10,6 +10,10 @@ ur_lat: 69.005
 n_pixels_x: 760
 n_pixels_y: 1226
 
+[kriging]
+# the Kriging method to use: 'ordinary' or 'regression'
+method:
+
 [output]
 # output type
 #   geotiff = GeoTIFF file
