--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,6 @@ name: radargaugemerging
 channels:
   - conda-forge
   - defaults
-  - https://repo.anaconda.com/pkgs/r
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
@@ -57,6 +56,7 @@ dependencies:
   - ipython=9.0.0=pyhfb0248b_0
   - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
   - jedi=0.19.2=pyhd8ed1ab_1
+  - joblib=1.4.2=pyhd8ed1ab_1
   - json-c=0.18=h6688a6e_0
   - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.8=py312h84d6215_0
@@ -171,6 +171,7 @@ dependencies:
   - rav1e=0.6.6=he8a937b_2
   - readline=8.2=h8c095d6_2
   - requests=2.32.3=pyhd8ed1ab_1
+  - scikit-learn=1.6.1=py312h7a48858_0
   - scipy=1.15.2=py312ha707e6e_0
   - setuptools=75.8.2=pyhff2d567_0
   - six=1.17.0=pyhd8ed1ab_0
@@ -178,6 +179,7 @@ dependencies:
   - sqlite=3.49.1=h9eae976_1
   - stack_data=0.6.3=pyhd8ed1ab_1
   - svt-av1=3.0.0=h5888daf_0
+  - threadpoolctl=3.6.0=pyhecae5ae_0
   - tk=8.6.13=noxft_h4845f30_101
   - tornado=6.4.2=py312h66e93f0_0
   - traitlets=5.14.3=pyhd8ed1ab_1
