Make number of neighbors used with Kriging configurable

--- a/config/template/fit_kriging_model.cfg
+++ b/config/template/fit_kriging_model.cfg
@@ -5,3 +5,6 @@ method:
 # auto: heuristic value based on the standard deviations of spatial and temporal
 #       coordinates
 time_scaling_factor: auto
+# number of neighbors to use with Kriging
+# set to 0 to use all neighbors
+n_closest_points: 0
