--- a/config/template/collect_radar_gauge_pairs.cfg
+++ b/config/template/collect_radar_gauge_pairs.cfg
@@ -20,6 +20,6 @@ max_missing_radar_timestamps=3
 # comma-separated list of additional attributes to include to the radar-gauge
 # pairs
 # the currently implemented attributes:
-#   distance: distance of the gauge to the nearest radar (km)
+#   distance_to_radar: distance of the gauge to the nearest radar (km)
 #   gauge_location: location of the rain gauge (x,y) in projected coordinates
 attributes=
