Implement option to restrict distance to the nearest radar in Kriging

--- a/config/template/compute_kriged_correction_factors.cfg
+++ b/config/template/compute_kriged_correction_factors.cfg
@@ -19,3 +19,6 @@ method:
 #   geotiff = GeoTIFF file
 #   numpy = compressed numpy array
 type: geotiff
+# maximum distance to nearest radar
+# locations beyond this distance are marked with no data value
+max_dist_to_nearest_radar: 200
