Remove incorrect n_closest_points from constructor call of OrdinaryKriging3D

--- a/config/template/fit_kriging_model.cfg
+++ b/config/template/fit_kriging_model.cfg
@@ -6,5 +6,6 @@ method:
 #       coordinates
 time_scaling_factor: auto
 # number of neighbors to use with Kriging
+# applicable if method is 'regression'
 # set to 0 to use all neighbors
 n_closest_points: 0
