Add option to restrict distance to the nearest radar-gauge pair in Kriging

--- a/config/template/compute_kriged_correction_factors.cfg
+++ b/config/template/compute_kriged_correction_factors.cfg
@@ -22,3 +22,6 @@ type: geotiff
 # maximum distance to nearest radar
 # locations beyond this distance are marked with no data value
 max_dist_to_nearest_radar: 200
+# maximum distance to nearest gauge with valid gauge-radar observation pair
+# locations beyond this distance are marked with no data value
+max_dist_to_nearest_gauge: 150
