Add option to mask grid pixels outside the convex hull of rain gauge locations

--- a/config/template/compute_kriged_correction_factors.cfg
+++ b/config/template/compute_kriged_correction_factors.cfg
@@ -25,3 +25,6 @@ max_dist_to_nearest_radar: 200
 # maximum distance to nearest gauge with valid gauge-radar observation pair
 # locations beyond this distance are marked with no data value
 max_dist_to_nearest_gauge: 150
+# exclude grid pixels outside the convex hull of gauge-radar pairs with valid
+# values
+gauge_convex_hull_mask: true
