Add option for smooth transition to zero values instead of sharp discontinuity at correction field boundaries

--- a/config/template/compute_kriged_correction_factors.cfg
+++ b/config/template/compute_kriged_correction_factors.cfg
@@ -28,3 +28,6 @@ max_dist_to_nearest_gauge: 150
 # exclude grid pixels that are beyond the above maximum distance and outside the
 # convex hull of gauge-radar pairs with valid values
 gauge_convex_hull_mask: true
+# distance range (pixels) for smoothing the boundaries of the correction field
+# mask
+mask_blur_distance: 100
