Add option to restrict value range of valid interpolation points when fitting Kriging models

--- a/config/template/fit_kriging_model.cfg
+++ b/config/template/fit_kriging_model.cfg
@@ -9,3 +9,10 @@ time_scaling_factor: auto
 # applicable if method is 'regression'
 # set to 0 to use all neighbors
 n_closest_points: 0
+# minimum value of gauge-radar correction factor to include the pair into
+# model fitting
+min_corr_factor: -1
+# maximum value of gauge-radar correction factor to include the pair into
+# model fitting
+max_corr_factor: 1
+
