Add option for minimum number of points to fit Kriging model

--- a/config/template/fit_kriging_model.cfg
+++ b/config/template/fit_kriging_model.cfg
@@ -9,6 +9,8 @@ time_scaling_factor: auto
 # applicable if method is 'regression'
 # set to 0 to use all neighbors
 n_closest_points: 0
+# minimum number of valid gauge-radar pairs for model fitting
+min_valid_points: 5
 # minimum value of gauge-radar correction factor to include the pair into
 # model fitting
 min_corr_factor: -1
