Add documentation of different rain gauge types

--- a/config/template/datasources.cfg
+++ b/config/template/datasources.cfg
@@ -39,7 +39,15 @@ accum_period=5
 
 [gauge]
 # the rain gauge data to read from SmartMet
-# PRA_PT1H_ACC = 1 h accumulation
+#
+# rain gauge types / weighing:
+#   PRA_PT1H_ACC, PRA_PT6H_ACC, PRA_PT12H_ACC, PRA_PT24H_ACC: 1, 6, 12 and 24
+#   hour accumulations
+#   PRA_PT10M_MAX, PRI_PT10M_AVG: 10 minute max. and average intensity
+# rain gauge types / optical:
+#   PRAO_PT1H_ACC, PRAO_PT12H_ACC, PRAO_PT24H_ACC: 1, 6, 12 and 24 hour
+#   accumulations
+#   PRAO_PT10M_MAX, PRIO_PT10M_AVG: 10 minute max. and average intensity
 gauge_type=PRA_PT1H_ACC
 # length of the accumulation period (minutes)
 accum_period=60
