Add option to accumulate rain gauge observations

--- a/config/template/datasources.cfg
+++ b/config/template/datasources.cfg
@@ -51,3 +51,14 @@ accum_period=5
 gauge_type=PRA_PT1H_ACC
 # length of the accumulation period (minutes)
 accum_period=60
+# set this to "true" to accumulate the original gauge observations over a longer
+# time period
+accumulate=false
+
+# options applicable when the original gauge measurements are accumulated over
+# a longer time period
+[gauge_accumulation]
+# length of time period for accumulating the gauge observations (minutes)
+accum_period=60
+# time step for calculating the accumulation (minutes)
+timestep=1
