Several fixes to accumulation of gauge rain rates

--- a/config/template/datasources.cfg
+++ b/config/template/datasources.cfg
@@ -50,7 +50,11 @@ accum_period=5
 #   PRAO_PT10M_MAX, PRIO_PT10M_AVG: 10 minute max. and average intensity
 gauge_type=PRA_PT1H_ACC
 # length of the accumulation period (minutes)
+# This parameter is ignored if accumulate=true. Then the target_accum_period
+# parameter from gauge_accumulation section is used instead.
 accum_period=60
+# time step between observations (minutes)
+timestep=60
 # set this to "true" to accumulate the original gauge observations over a longer
 # time period
 accumulate=false
@@ -58,7 +62,8 @@ accumulate=false
 # options applicable when the original gauge measurements are accumulated over
 # a longer time period
 [gauge_accumulation]
-# length of time period for accumulating the gauge observations (minutes)
-accum_period=60
-# time step for calculating the accumulation (minutes)
-timestep=1
+# length of the time period in the unit of gauge observations (minutes)
+# for instance, if the unit is mm/h, set this to 60
+obs_accum_period=60
+# length of time period for accumulating the observations (minutes)
+target_accum_period=60
