Add option to exclude selected stations

--- a/config/template/collect_radar_gauge_pairs.cfg
+++ b/config/template/collect_radar_gauge_pairs.cfg
@@ -6,6 +6,11 @@ ll_lat=57.93
 ur_lon=34.903
 ur_lat=69.005
 
+# file containing a list of station ids to exclude
+# use this for validation
+[gauge_selection]
+excluded_station_file=""
+
 # exclude observations below the thresholds from the output
 [thresholds]
 gauge=0.1
