Allow disabling distance-based masking

--- a/config/template/compute_kriged_correction_factors.cfg
+++ b/config/template/compute_kriged_correction_factors.cfg
@@ -21,12 +21,14 @@ method:
 type: geotiff
 # maximum distance to nearest radar
 # locations beyond this distance are marked with no data value
+# set to zero to disable this feature
 max_dist_to_nearest_radar: 200
 # maximum distance to nearest gauge with valid gauge-radar observation pair
 # locations beyond this distance are marked with no data value
+# set to zero to disable this feature
 max_dist_to_nearest_gauge: 150
-# exclude grid pixels that are beyond the above maximum distance and outside the
-# convex hull of gauge-radar pairs with valid values
+# exclude grid pixels that are outside the convex hull of gauge-radar pairs with
+# valid values
 gauge_convex_hull_mask: true
 # distance range (pixels) for smoothing the boundaries of the correction field
 # mask
