--- a/config/template/datasources.cfg
+++ b/config/template/datasources.cfg
@@ -11,8 +11,8 @@ path_fmt=%Y/%m/%d/fmi/radar/composite/lowest
 # the name pattern of the files without extension
 # may contain time specifiers (e.g. %H, %M and %S)
 fn_pattern=%Y%m%d%H%M_fmi.radar.composite.lowest_FIN_SUOMI1
-# extension of the file names
-fn_ext=pgm.gz
+# comma-separated list of possible file name extensions
+fn_exts=pgm,pgm.gz
 # time step between the files (minutes)
 timestep=5
 # the importer to use for reading the files
@@ -34,7 +34,8 @@ bbox_ur_lat=69.005
 # accumulated radar rainfall
 accum_period=5
 
-# additional keyword arguments for reading radar data
+# additional keyword arguments that are passed to the function for reading
+# radar composites
 [radar_importer_kwargs]
 
 [gauge]
