Add option to use Netatmo as gauge data source

--- a/config/template/datasources.cfg
+++ b/config/template/datasources.cfg
@@ -49,6 +49,8 @@ accum_period=5
 #   PRAO_PT1H_ACC, PRAO_PT12H_ACC, PRAO_PT24H_ACC: 1, 6, 12 and 24 hour
 #   accumulations
 #   PRAO_PT10M_MAX, PRIO_PT10M_AVG: 10 minute max. and average intensity
+# rain gauge types / other:
+#   NETATMO: Netatmo hourly accumulation
 gauge_type=PRA_PT1H_ACC
 # length of the accumulation period (minutes)
 # This parameter is ignored if accumulate=true. Then the target_accum_period
