Add optio select dimensions of Kriging interpolation: 2d (spatial-only) or 3d (spatiotemporal)

--- a/config/template/compute_kriged_correction_factors.cfg
+++ b/config/template/compute_kriged_correction_factors.cfg
@@ -13,6 +13,10 @@ n_pixels_y: 1226
 [kriging]
 # the Kriging method to use: 'ordinary' or 'regression'
 method:
+# dimensions of the data points
+#   2: spatial (2d)
+#   3: spatial (2d) + temporal
+dimensions: 3
 
 [output]
 # output type
