--- a/config/template/fit_kriging_model.cfg
+++ b/config/template/fit_kriging_model.cfg
@@ -1,6 +1,10 @@
 [kriging]
 # the Kriging method to use: 'ordinary' or 'regression'
 method:
+# dimensions of the data points
+#   2: spatial (2d)
+#   3: spatial (2d) + temporal
+dimensions: 3
 # scaling factor for the temporal dimension: 'auto' or a scalar
 # auto: heuristic value based on the standard deviations of spatial and temporal
 #       coordinates
