Add epsilon parameter to calculation of gauge/radar errors

--- a/config/template/fit_kriging_model.cfg
+++ b/config/template/fit_kriging_model.cfg
@@ -21,4 +21,6 @@ min_corr_factor: -1
 # maximum value of gauge-radar correction factor to include the pair into
 # model fitting
 max_corr_factor: 1
-
+# constant that is added to radar and gauge measurements when calculating the
+# gauge / radar error
+epsilon: 0
