--- a/config/template/compute_kriged_correction_factors.cfg
+++ b/config/template/compute_kriged_correction_factors.cfg
@@ -18,6 +18,12 @@ method:
 #   3: spatial (2d) + temporal
 dimensions: 3
 
+# configuration of the regression model when using regression-Kriging
+[regression]
+# comma-separated list of regression variables
+# these need to match with the variables specified in fit_kriging_model.cfg
+variables=
+
 [output]
 # output type
 #   geotiff = GeoTIFF file
