--- a/config/template/fit_kriging_model.cfg
+++ b/config/template/fit_kriging_model.cfg
@@ -24,3 +24,10 @@ max_corr_factor: 1
 # constant that is added to radar and gauge measurements when calculating the
 # gauge / radar error
 epsilon: 0
+
+# configuration of the regression model when using regression-Kriging
+[regression]
+# comma-separated list of regression variables
+# these correspond to the attributes specified in collect_radar_gauge_pairs.cfg
+# not currently implemented for gauge_location
+variables=
